--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@emotion/cache": "^11.14.0",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^5.16.7",
+    "@mui/material-nextjs": "^6.4.3",
     "@mui/x-date-pickers": "^7.13.0",
     "dayjs": "^1.11.13",
     "next": "14.2.5",
